; ModuleID = '/home/carl/AnghaBench/borg/src/borg/extr__item.c__optr_to_object.c'
source_filename = "/home/carl/AnghaBench/borg/src/borg/extr__item.c__optr_to_object.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PyExc_TypeError = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"Cannot unwrap non-bytes object\00", align 1
@.str.1 = private unnamed_addr constant [31 x i8] c"Invalid length of bytes object\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @_optr_to_object to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @_optr_to_object(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i32 @PyBytes_Check(i32* %5)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %11, label %8

8:                                                ; preds = %1
  %9 = load i32, i32* @PyExc_TypeError, align 4
  %10 = call i32 @PyErr_SetString(i32 %9, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  store i32* null, i32** %2, align 8
  br label %25

11:                                               ; preds = %1
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @PyBytes_Size(i32* %12)
  %14 = sext i32 %13 to i64
  %15 = icmp ne i64 %14, 8
  br i1 %15, label %16, label %19

16:                                               ; preds = %11
  %17 = load i32, i32* @PyExc_TypeError, align 4
  %18 = call i32 @PyErr_SetString(i32 %17, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0))
  store i32* null, i32** %2, align 8
  br label %25

19:                                               ; preds = %11
  %20 = load i32*, i32** %3, align 8
  %21 = call i64 @PyBytes_AsString(i32* %20)
  %22 = inttoptr i64 %21 to i32**
  %23 = load i32*, i32** %22, align 8
  store i32* %23, i32** %4, align 8
  %24 = load i32*, i32** %4, align 8
  store i32* %24, i32** %2, align 8
  br label %25

25:                                               ; preds = %19, %16, %8
  %26 = load i32*, i32** %2, align 8
  ret i32* %26
}

declare dso_local i32 @PyBytes_Check(i32*) #1

declare dso_local i32 @PyErr_SetString(i32, i8*) #1

declare dso_local i32 @PyBytes_Size(i32*) #1

declare dso_local i64 @PyBytes_AsString(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
